--- a/nvim/coc-settings-base.json
+++ b/nvim/coc-settings-base.json
@@ -26,9 +26,11 @@
     "diagnostic.virtualTextPrefix": "  ‣ ",
     "diagnostic.virtualTextLineSeparator": " \\ ",
 
+    "snippets.userSnippetsDirectory": "snips",
     "snippets.ultisnips.directories": [
         "UltiSnips",
-        "snips"
+        "snips",
+        "gosnippets/UltiSnips"
     ],
 
     "python.jediEnabled": false,
