update tmux copying

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -104,15 +104,20 @@ bind -r l select-pane -R  # move right
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\'" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # pane resizing
@@ -145,34 +150,56 @@ run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
-# run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-# run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-# run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
-# run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
-# run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
-# run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
-# # copy to Mac OSX clipboard
-# if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-# # copy to X11 clipboard
-# if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-# if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-# # copy to Windows clipboard
-# if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
-# if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
-
-if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
-           "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
-
-yank="~/.tmux/yank.sh"
-# Copy selected text
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
-bind -T copy-mode-vi Y send-keys -X copy-line \;\
-    run "tmux save-buffer - | $yank"
-bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
-    run "tmux save-buffer - | $yank"
-bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
-    run "tmux save-buffer - | $yank"
+# copy to macOS clipboard
+if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# copy to X11 clipboard
+if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# copy to Windows clipboard
+if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
+if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
+# run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
+# run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
+# run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
+# run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
+# # run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
+# # run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+# # run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
+# # run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
+# # run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+# # run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+#
+# # # copy to Mac OSX clipboard
+# # if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# # # copy to X11 clipboard
+# # if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+# # if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# # # copy to Windows clipboard
+# # if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
+# # if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
+#
+# if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
+#            "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
+#
+# yank="~/.tmux/yank.sh"
+# # Copy selected text
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
+# bind -T copy-mode-vi Y send-keys -X copy-line \;\
+#     run "tmux save-buffer - | $yank"
+# bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
+#     run "tmux save-buffer - | $yank"
+# bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
+#     run "tmux save-buffer - | $yank"
 
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cleared"
@@ -228,9 +255,9 @@ bind-key 0 run "tmux split-window -l 12 'zsh -ci ftpane'"
 # etc.
 # -------------------------------------------------------------------
 
-# Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.conf.remote'
+# # Session is considered to be remote when we ssh into host
+# if-shell 'test -n "$SSH_CLIENT"' \
+#     'source-file ~/.tmux/tmux.conf.remote'
 
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 bind -T root F12  \
