--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,11 +32,11 @@ set-option -s escape-time 10
 # Repeat time limit (ms)
 set-option -g repeat-time 500
 
-# 256-color terminal
-set-option -g default-terminal "xterm-256color"
+# tmux-256color instead of screen-256color enables italics
+set -g default-terminal "tmux-256color"
 
-# Add truecolor support (tmux info | grep Tc)
-set-option -ga terminal-overrides ",*256col*:Tc"
+# Tc enables true color
+set -ag terminal-overrides ",*256col*:colors=256:Tc"
 
 # set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
@@ -150,56 +150,24 @@ run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
-# copy to macOS clipboard
-if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-# copy to X11 clipboard
-if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-# copy to Windows clipboard
-if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
-if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
-# run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
-# run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
-# run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
-# run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
-# # run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-# # run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-# # run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
-# # run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
-# # run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
-# # run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
-#
-# # # copy to Mac OSX clipboard
-# # if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-# # # copy to X11 clipboard
-# # if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-# # if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-# # # copy to Windows clipboard
-# # if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
-# # if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
-#
-# if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
-#            "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
-#
-# yank="~/.tmux/yank.sh"
-# # Copy selected text
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
-# bind -T copy-mode-vi Y send-keys -X copy-line \;\
-#     run "tmux save-buffer - | $yank"
-# bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
-#     run "tmux save-buffer - | $yank"
-# bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
-#     run "tmux save-buffer - | $yank"
+# wrap default shell in reattach-to-user-namespace if available
+# there is some hack with `exec & reattach`, credits to "https://github.com/gpakosz/.tmux"
+# don't really understand how it works, but at least window are not renamed to "reattach-to-user-namespace"
+if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
+           "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
+
+
+yank="~/.tmux/yank.sh"
+
+# Copy selected text
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
+bind -T copy-mode-vi Y send-keys -X copy-line \;\
+    run "tmux save-buffer - | $yank"
+bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
+    run "tmux save-buffer - | $yank"
+bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
+    run "tmux save-buffer - | $yank"
 
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cleared"
@@ -256,8 +224,8 @@ bind-key 0 run "tmux split-window -l 12 'zsh -ci ftpane'"
 # -------------------------------------------------------------------
 
 # # Session is considered to be remote when we ssh into host
-# if-shell 'test -n "$SSH_CLIENT"' \
-#     'source-file ~/.tmux/tmux.conf.remote'
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file $HOME/.tmux/tmux.conf.remote'
 
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 bind -T root F12  \
