--- a/config_osx.yaml
+++ b/config_osx.yaml
@@ -1,4 +1,11 @@
 #######################
+# installTermInfo
+#######################
+
+terminfo:
+  install: true
+
+#######################
 # installZsh
 #######################
 
