--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,8 +35,8 @@ set-option -g repeat-time 500
 # tmux-256color instead of screen-256color enables italics
 set -g default-terminal "tmux-256color"
 
-# Tc enables true color
-set -ag terminal-overrides ",*256col*:colors=256:Tc"
+# Tc/RGB enables true color
+set -ga terminal-overrides ",*256col*:Tc:RGB"
 
 # set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
@@ -84,8 +84,8 @@ bind-key -r C-l next-window     # select next window
 bind-key a send-prefix
 
 # Moving windows
-bind-key -r > swap-window -t :+
-bind-key -r < swap-window -t :-
+bind-key -r > swap-window -t :+ \; select-window -n
+bind-key -r < swap-window -t :- \; select-window -p
 
 # Back and forth
 bind-key Space next-layout # Overridden
