--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -161,161 +161,64 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Seoul256)
+# # Colors (Seoul256)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x3a3a3a'
+#     foreground: '0xd0d0d0'
+#
+#   # Normal colors
+#   normal:
+#     black:   '0x4e4e4e'
+#     red:     '0xd68787'
+#     green:   '0x5f865f'
+#     yellow:  '0xd8af5f'
+#     blue:    '0x85add4'
+#     magenta: '0xd7afaf'
+#     cyan:    '0x87afaf'
+#     white:   '0xd0d0d0'
+#
+#   # Bright colors
+#   bright:
+#     black:   '0x626262'
+#     red:     '0xd75f87'
+#     green:   '0x87af87'
+#     yellow:  '0xffd787'
+#     blue:    '0xadd4fb'
+#     magenta: '0xffafaf'
+#     cyan:    '0x87d7d7'
+#     white:   '0xe4e4e4'
+#
+
+# Colors (Dracula)
 colors:
   # Default colors
   primary:
-    background: '0x3a3a3a'
-    foreground: '0xd0d0d0'
+    background: '#2a2426'
+    foreground: '#e0d9c7'
 
   # Normal colors
   normal:
-    black:   '0x4e4e4e'
-    red:     '0xd68787'
-    green:   '0x5f865f'
-    yellow:  '0xd8af5f'
-    blue:    '0x85add4'
-    magenta: '0xd7afaf'
-    cyan:    '0x87afaf'
-    white:   '0xd0d0d0'
+    black:   '#000000'
+    red:     '#e2615c'
+    green:   '#53e382'
+    yellow:  '#d6da8a'
+    blue:    '#ab8fd4'
+    magenta: '#e181b8'
+    cyan:    '#87d0de'
+    white:   '#c7c7c7'
 
   # Bright colors
   bright:
-    black:   '0x626262'
-    red:     '0xd75f87'
-    green:   '0x87af87'
-    yellow:  '0xffd787'
-    blue:    '0xadd4fb'
-    magenta: '0xffafaf'
-    cyan:    '0x87d7d7'
-    white:   '0xe4e4e4'
-
-# # Colors (One Dark)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x282c34'
-#     foreground: '0xabb2bf'
-#
-#   # Normal colors
-#   normal:
-#     # NOTE: Use '0x131613' for the `black` color if you'd like to see
-#     # black text on the background.
-#     black:   '0x282c34'
-#     red:     '0xe06c75'
-#     green:   '0x98c379'
-#     yellow:  '0xd19a66'
-#     blue:    '0x61afef'
-#     magenta: '0xc678dd'
-#     cyan:    '0x56b6c2'
-#     white:   '0xabb2bf'
-#
-#   # Bright colors
-#   bright:
-#     black:   '0x5c6370'
-#     red:     '0xe06c75'
-#     green:   '0x98c379'
-#     yellow:  '0xd19a66'
-#     blue:    '0x61afef'
-#     magenta: '0xc678dd'
-#     cyan:    '0x56b6c2'
-#     white:   '0xffffff'
-
-# # Colors (Snazzy)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x282a36'
-#     foreground: '0xeff0eb'
-#
-#   # Normal colors
-#   normal:
-#     black:   '0x282a36'
-#     red:     '0xff5c57'
-#     green:   '0x5af78e'
-#     yellow:  '0xf3f99d'
-#     blue:    '0x57c7ff'
-#     magenta: '0xff6ac1'
-#     cyan:    '0x9aedfe'
-#     white:   '0xf1f1f0'
-#
-#   # Bright colors
-#   bright:
-#     black:   '0x686868'
-#     red:     '0xff5c57'
-#     green:   '0x5af78e'
-#     yellow:  '0xf3f99d'
-#     blue:    '0x57c7ff'
-#     magenta: '0xff6ac1'
-#     cyan:    '0x9aedfe'
-#     white:   '0xf1f1f0'
-
-
-# # Colors (Tomorrow Night Bright)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x000000'
-#     foreground: '0xeaeaea'
-#
-#     # Bright and dim foreground colors
-#     #
-#     # The dimmed foreground color is calculated automatically if it is not present.
-#     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-#     # is `false`, the normal foreground color will be used.
-#     #dim_foreground: '0x9a9a9a'
-#     #bright_foreground: '0xffffff'
-#
-#   # Cursor colors
-#   #
-#   # Colors which should be used to draw the terminal cursor. If these are unset,
-#   # the cursor color will be the inverse of the cell color.
-#   #cursor:
-#   #  text: '0x000000'
-#   #  cursor: '0xffffff'
-#
-#   # Normal colors
-#   normal:
-#     black:   '0x000000'
-#     red:     '0xd54e53'
-#     green:   '0xb9ca4a'
-#     yellow:  '0xe6c547'
-#     blue:    '0x7aa6da'
-#     magenta: '0xc397d8'
-#     cyan:    '0x70c0ba'
-#     white:   '0xffffff'
-#
-#   # Bright colors
-#   bright:
-#     black:   '0x666666'
-#     red:     '0xff3334'
-#     green:   '0x9ec400'
-#     yellow:  '0xe7c547'
-#     blue:    '0x7aa6da'
-#     magenta: '0xb77ee0'
-#     cyan:    '0x54ced6'
-#     white:   '0xffffff'
-#
-#   # Dim colors
-#   #
-#   # If the dim colors are not set, they will be calculated automatically based
-#   # on the `normal` colors.
-#   dim:
-#     black:   '0x333333'
-#     red:     '0xf2777a'
-#     green:   '0x99cc99'
-#     yellow:  '0xffcc66'
-#     blue:    '0x6699cc'
-#     magenta: '0xcc99cc'
-#     cyan:    '0x66cccc'
-#     white:   '0xdddddd'
-#
-#   # Indexed Colors
-#   #
-#   # The indexed colors include all colors from 16 to 256.
-#   # When these are not set, they're filled with sensible defaults.
-#   #indexed_colors:
-#   #  - { index: 16, color: '0x000000' }
+    black:   '#676767'
+    red:     '#ff6d67'
+    green:   '#59f68d'
+    yellow:  '#f3f89d'
+    blue:    '#c9a8fa'
+    magenta: '#ff92d0'
+    cyan:    '#99ecfd'
+    white:   '#feffff'
 
 # Bell
 #
