--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -201,7 +201,7 @@ set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[b
 set-option -g status-interval 60  # redraw status line every 10 seconds
 
 set-option -g pane-border-status bottom
-set-option -g pane-border-format "#{pane_index} #{pane_current_command} #{pane_title} "
+set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
 set-option -g pane-active-border-style "fg=colour253"
 set-option -g pane-border-style "fg=colour243"
 
@@ -237,7 +237,7 @@ bind -T root F12  \
      set-option -g status-position top \;\
      refresh-client -S \;\
 
- bind -T off F12 \
+bind -T off F12 \
      set-option -u prefix \;\
      set-option -u key-table \;\
      set-option -u status-left \;\
