--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -194,11 +194,13 @@ set-option -g status-left-length 30
 set-option -g status-bg colour237
 # set-option -g status-right '#{prefix_highlight} #{?pane_synchronized, #[bg=colour236] #[bg=green]#[fg=white] SYNC #[bg=colour236] ,}#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[bg=colour4]#[fg=colour15] ^A #[bg=colour236] ,}\
-#{?pane_in_mode,#[bg=colour237] #[bg=colour236] #[bg=colour3]#[fg=colour15] COPY #[bg=colour236] ,}\
-#{?pane_synchronized,#[bg=colour237] #[bg=colour236] #[bg=colour10]#[fg=colour15] SYNC #[bg=colour236] ,}\
+#{?pane_in_mode,#[bg=colour237] #[bg=colour236] #[bg=colour3]#[fg=colour16] COPY #[bg=colour236] ,}\
+#{?pane_synchronized,#[bg=colour237] #[bg=colour236] #[bg=colour10]#[fg=colour16] SYNC #[bg=colour236] ,}\
 #{?mousemode_indicator,#[bg=colour237] #[bg=colour236] #[bg=colour1]#[fg=colour15] MOUSE #[bg=colour236] ,}\
 #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
-set-option -g status-interval 60  # redraw status line every 10 seconds
+set-option -g status-right-length 60
+
+set-option -g status-interval 60  # redraw status line every 60 seconds
 
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#{pane_index} #{pane_current_command} "
