--- a/config_osx.yaml
+++ b/config_osx.yaml
@@ -121,6 +121,15 @@ bash_snippets:
   force: true
 
 #######################
+#  installBpytop
+#######################
+
+bpytop:
+  install: true
+  local: false
+  force: true
+
+#######################
 # installDevshell
 #######################
 
