--- a/nvim/coc-settings-base.json
+++ b/nvim/coc-settings-base.json
@@ -7,17 +7,22 @@
     "suggest.preferCompleteThanJumpPlaceholder": false,
     "suggest.timeout": 2000,
     "suggest.echodocSupport": false,
+
     "signature.enable": true,
     "signature.target": "float",
     "signature.preferShownAbove": false,
     "signature.hideOnTextChange": false,
+
     "codeLens.enable": true,
+
     "coc.preferences.extensionUpdateCheck": "weekly",
     "coc.preferences.hoverTarget": "float",
     "coc.preferences.colorSupport": false,
     "coc.preferences.enableFloatHighlight": true,
     "coc.preferences.useQuickfixForLocations": true,
+
     "coc.source.file.ignoreHidden": false,
+
     "list.nextKeymap": "<C-n>",
     "list.previousKeymap": "<C-p>",
 
@@ -45,8 +50,10 @@
     "python.venvPath": "",
     "python.pythonPath": "python",
 
+    "yaml.format.enable": true,
     "yaml.schemas": {
-        "kubernetes": "/*.yaml"
+        "kubernetes": ["/*"],
+        "https://raw.githubusercontent.com/compose-spec/compose-spec/master/schema/compose-spec.json": ["/docker-compose.yaml", "/docker-compose.yml"]
     },
 
     "sh.enable": true,
