--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -58,7 +58,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  decorations: none
+  decorations: full
 
   # Startup Mode (changes require restart)
   #
@@ -120,19 +120,19 @@ font:
   normal:
     family: SFMono Nerd Font
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Light
 
   # Bold font face
   bold:
     family: SFMono Nerd Font
     # The `style` can be specified to pick a specific face.
-    #style: Semibold
+    style: Bold
 
   # Italic font face
   italic:
     family: SFMono Nerd Font
     # The `style` can be specified to pick a specific face.
-    #style: Regular Italic
+    style: Light Italic
 
 
   # Point size
